<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColor="@color/title"
        android:gravity="center"
        android:textSize="80px"
        android:text="@string/protocol_title" />
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="478dp" >
    <TextView
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="462dp"
        android:text="@string/protocolview"
        android:scrollbars="vertical"/>
    </ScrollView>
    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/agree"
        android:onClick="onClick"
        />
</LinearLayout>
