<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/back" >
    <LinearLayout
        android:id="@+id/ll_take"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:onClick="onClick">

        <ImageView
            android:id="@+id/iv_take"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="false"
            android:background="@mipmap/pic_take" />

        <TextView
            android:id="@+id/tv_take"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/take_title"
            android:textColor="@android:color/background_light"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_link"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:onClick="onClick">

        <ImageView
            android:id="@+id/iv_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/pic_link" />

        <TextView
            android:id="@+id/tv_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/link_title"
            android:textColor="@android:color/background_light"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_set"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:onClick="onClick">

        <ImageView
            android:id="@+id/iv_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/pic_setting"  />
        <TextView
            android:id="@+id/tv_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/set_title"
            android:textColor="@android:color/background_light"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>
